--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,13 @@ body {
     /*height: 100%;*/
     /*min-height: max-content; !* 超出后自动延伸背景 *!*/
     min-height: 100vh;
-    background-color: #333;
+    background-color: #8fc994;
 }
 
 body {
     display: -ms-flexbox;
     /*display: flex;*/
-    color: #fff;
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+    /*color: #fff;*/
+    /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);*/
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
